Revert "removes animation from nav hover state because of a bug on Safari"
This reverts commit 4aca4c04959bef381e15b23a884da3f1fe5c4515.

--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,8 @@ nav a:visited {
     padding: 12px;
     border-radius: 2px 2px 0 0;
     text-decoration: none;
+    transition-property: color, background-color;
+    transition-duration: 200ms;
 }
 
 nav li.active a {
